Add additional parameters for tokenizer and general bugfixing

--- a/docs/meetings/3-10-2023.md
+++ b/docs/meetings/3-10-2023.md
@@ -1,3 +1,15 @@
 # Questions
 - How much emphasis should be placed in the background research for related work or theoretical background of turn-taking
 	- Related work can mean BERT, transfer learning, LSTM RNNs for turn-taking, TurnGPT
+- What should be predicted?     
+    - TRP classification 
+    - Tokens
+- How data should be represented? 
+    - In order to use context and multiple turns in the data 
+- Any additional data?
+    - voice activity data in order to account for backchannels and overlaps
+- Solving imbalanced class issue
+- Multi-modality?
+- Simulating turn-prediction and if the system should perform in real-time
+- Questions as listed in the email provided 
+
