Add sources to bibliography

--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -17,3 +17,252 @@
 	type = {Article},
 	source = {Scopus}
 }
+
+@article{LevTor2015,
+  title={Timing in turn-taking and its implications for processing models of language},
+  author={Levinson, Stephen C and Torreira, Francisco},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={731},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
+
+@article{Clayman2012,
+  title={Turn-constructional units and the transition-relevance place},
+  author={Clayman, Steven E},
+  journal={The handbook of conversation analysis},
+  pages={151--166},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{DeRuiter2006,
+  title={Projecting the end of a speaker's turn: A cognitive cornerstone of conversation},
+  author={De Ruiter, Jan-Peter and Mitterer, Holger and Enfield, Nick J},
+  journal={Language},
+  volume={82},
+  number={3},
+  pages={515--535},
+  year={2006},
+  publisher={Linguistic Society of America}
+}
+@article{Ford1996,
+  title={Interactional units in conversation: Syntactic, intonational, and pragmatic resources for the management of turns},
+  author={Ford, Cecilia E and Thompson, Sandra A},
+  journal={Studies in interactional sociolinguistics},
+  volume={13},
+  pages={134--184},
+  year={1996},
+  publisher={THE UNIVERSITY OF CAMBRIDGE PRESS}
+}
+@article{Fry1975,
+  title={Simple reaction-times to speech and non-speech stimuli},
+  author={Fry, Dennis B},
+  journal={Cortex},
+  volume={11},
+  number={4},
+  pages={355--360},
+  year={1975},
+  publisher={Elsevier}
+}
+@article{Gravey1981,
+  title={Timing and turn taking in children's conversations},
+  author={Garvey, Catherine and Berninger, Ginger},
+  journal={Discourse processes},
+  volume={4},
+  number={1},
+  pages={27--57},
+  year={1981},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{Gravano2009,
+  title={Backchannel-inviting cues in task-oriented dialogue},
+  author={Gravano, Agust{\'\i}n and Hirschberg, Julia},
+  booktitle={Tenth Annual Conference of the International Speech Communication Association},
+  year={2009}
+}
+@article{HelEdl2010,
+  title={Pauses, gaps and overlaps in conversations},
+  author={Heldner, Mattias and Edlund, Jens},
+  journal={Journal of Phonetics},
+  volume={38},
+  number={4},
+  pages={555--568},
+  year={2010},
+  publisher={Elsevier}
+}
+@article{IndLev2004,
+  title={The spatial and temporal signatures of word production components},
+  author={Indefrey, Peter and Levelt, Willem JM},
+  journal={Cognition},
+  volume={92},
+  number={1-2},
+  pages={101--144},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{Duncan1972,
+  title={Some signals and rules for taking speaking turns in conversations.},
+  author={Duncan, Starkey},
+  journal={Journal of personality and social psychology},
+  volume={23},
+  number={2},
+  pages={283},
+  year={1972},
+  publisher={American Psychological Association}
+}
+@article{Duncan1974,
+  title={On the structure of speaker--auditor interaction during speaking turns1},
+  author={Duncan, Starkey},
+  journal={Language in society},
+  volume={3},
+  number={2},
+  pages={161--180},
+  year={1974},
+  publisher={Cambridge University Press}
+}
+
+@article{Magyari2012,
+  title={Prediction of turn-ends based on anticipation of upcoming words},
+  author={Magyari, Lilla and De Ruiter, Jan P},
+  journal={Frontiers in psychology},
+  volume={3},
+  pages={376},
+  year={2012},
+  publisher={Frontiers Media SA}
+}
+@article{PicGar2013,
+  title={An integrated theory of language production and comprehension},
+  author={Pickering, Martin J and Garrod, Simon},
+  journal={Behavioral and brain sciences},
+  volume={36},
+  number={4},
+  pages={329--347},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+@article{Schegloff2000,
+  title={Overlapping talk and the organization of turn-taking for conversation},
+  author={Schegloff, Emanuel A},
+  journal={Language in society},
+  volume={29},
+  number={1},
+  pages={1--63},
+  year={2000},
+  publisher={Cambridge University Press}
+}
+@article{BogTor2015,
+  title={Listeners use intonational phrase boundaries to project turn ends in spoken interaction},
+  author={B{\"o}gels, Sara and Torreira, Francisco},
+  journal={Journal of Phonetics},
+  volume={52},
+  pages={46--57},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{Skantze2021,
+title = {Turn-taking in Conversational Systems and Human-Robot Interaction: A Review},
+journal = {Computer Speech & Language},
+volume = {67},
+pages = {101178},
+year = {2021},
+issn = {0885-2308},
+doi = {https://doi.org/10.1016/j.csl.2020.101178},
+url = {https://www.sciencedirect.com/science/article/pii/S088523082030111X},
+author = {Gabriel Skantze},
+keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
+
+@book{Duncan2015,
+  title={Face-to-face interaction: Research, methods, and theory},
+  author={Duncan, Starkey and Fiske, Donald W},
+  year={2015},
+  publisher={Routledge}
+}
+@article{Koiso1998,
+  title={An analysis of turn-taking and backchannels based on prosodic and syntactic features in Japanese map task dialogs},
+  author={Koiso, Hanae and Horiuchi, Yasuo and Tutiya, Syun and Ichikawa, Akira and Den, Yasuharu},
+  journal={Language and speech},
+  volume={41},
+  number={3-4},
+  pages={295--321},
+  year={1998},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{Garrod2015,
+  title={The use of content and timing to predict turn transitions},
+  author={Garrod, Simon and Pickering, Martin J},
+  journal={Frontiers in psychology},
+  volume={6},
+  number={751},
+  pages={1--12},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
+
+@article{Dethlefs2016,
+  title={Information density and overlap in spoken dialogue},
+  author={Dethlefs, Nina and Hastie, Helen and Cuay{\'a}huitl, Heriberto and Yu, Yanchao and Rieser, Verena and Lemon, Oliver},
+  journal={Computer speech \& language},
+  volume={37},
+  pages={82--97},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{GraHir2012,
+  title={A corpus-based study of interruptions in spoken dialogue},
+  author={Gravano, Agust{\'\i}n and Hirschberg, Julia},
+  booktitle={Thirteenth annual conference of the international speech communication association},
+  year={2012}
+}
+
+@article{Ekstedt2020,
+  title={Turngpt: a transformer-based language model for predicting turn-taking in spoken dialog},
+  author={Ekstedt, Erik and Skantze, Gabriel},
+  journal={arXiv preprint arXiv:2010.10874},
+  year={2020}
+}
+
+@inproceedings{Skantze2017,
+  title={Towards a general, continuous model of turn-taking in spoken dialogue using LSTM recurrent neural networks},
+  author={Skantze, Gabriel},
+  booktitle={Proceedings of the 18th Annual SIGdial Meeting on Discourse and Dialogue},
+  pages={220--230},
+  year={2017}
+}
+
+@article{Roddy2018,
+  title={Investigating speech features for continuous turn-taking prediction using lstms},
+  author={Roddy, Matthew and Skantze, Gabriel and Harte, Naomi},
+  journal={arXiv preprint arXiv:1806.11461},
+  year={2018}
+}
+
+@inproceedings{Masumura2018,
+  title={Neural dialogue context online end-of-turn detection},
+  author={Masumura, Ryo and Tanaka, Tomohiro and Ando, Atsushi and Ishii, Ryo and Higashinaka, Ryuichiro and Aono, Yushi},
+  booktitle={Proceedings of the 19th Annual SIGdial Meeting on Discourse and Dialogue},
+  pages={224--228},
+  year={2018}
+}
+@article{GraHir2011,
+  title={Turn-taking cues in task-oriented dialogue},
+  author={Gravano, Agust{\'\i}n and Hirschberg, Julia},
+  journal={Computer Speech \& Language},
+  volume={25},
+  number={3},
+  pages={601--634},
+  year={2011},
+  publisher={Elsevier}
+}
+@inproceedings{Ferrer2002,
+  title={Is the speaker done yet? Faster and more accurate end-of-utterance detection using prosody},
+  author={Ferrer, Luciana and Shriberg, Elizabeth and Stolcke, Andreas},
+  booktitle={Seventh international conference on spoken language processing},
+  year={2002}
+}
+
+
+
