--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -264,5 +264,15 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
   year={2002}
 }
 
+@article{Bates2003,
+  title={Timed picture naming in seven languages},
+  author={Bates, Elizabeth and D’Amico, Simona and Jacobsen, Thomas and Sz{\'e}kely, Anna and Andonova, Elena and Devescovi, Antonella and Herron, Dan and Ching Lu, Ching and Pechmann, Thomas and Pl{\'e}h, Csaba and others},
+  journal={Psychonomic bulletin \& review},
+  volume={10},
+  pages={344--380},
+  year={2003},
+  publisher={Springer}
+}
+
 
 
