--- a/docs/thesis/skeleton.tex
+++ b/docs/thesis/skeleton.tex
@@ -140,28 +140,15 @@ The most widely accepted model of turn-taking originates from \cite{Sacks1974}. 
 \cite{Sacks1974} noted that a turn-shift can but does not have to occur. The same could be said in reverse, that a turn-shift can occur when there is no TRP. At each TRP  \cite{Sacks1974} noted the turn-allocation techniques used to determine the next speaker. These techniques can be grouped into two categories: 'current selects next' and 'self-selection'. The current speaker selection could employ techniques such as gaze but for self selection it is simply the case that the first to start has the turn if the current speaker exhibits a non-selection. The current speaker is also able to select themselves if no other particpant self-selects. 
 
 The development of speech technology has allowed for the automatic analysis of turn-taking by employing statistical analyis of a large corpora. \cite{LevTor2015} provides a systemic overview of the properties first noted by \cite{Sacks1974} and produced their own model of turn-taking where: turns are mostly short (mean=1680ms, median=1227ms); gaps in a speaker's current utterance are longer than those between speakers suggesting that the next speaker has the right to speak prior to the current speaker and also that overlaps are more common at turn transitions and within turns. They also develop a psycholinguistic model for turn-taking that backs the claim made by \cite{Sacks1974} that turn-taking requires projection. 
-
-\cite{LevTor2015} turn transitions typically occur between -100ms and 500ms. This is proven probelmatic, if we employ a reaction-based system, where studies have shown that language production latenices range from 600ms - 1500ms \cite{IndLev2004, Bates2003} and are at minimum 200ms (for a prepared vowel \cite{Fry 1975}). A combination with a silence becoming reognisable (180ms \cite{}), the reaction to a silence (100ms) and language productions would result in at least a 550ms turn transition, outside the typical range. 
+<F8>
+\cite{LevTor2015} turn transitions typically occur between -100ms and 500ms. This is proven probelmatic, if we employ a reaction-based system, where studies have shown that language production latenices range from 600ms - 1500ms \cite{IndLev2004, Bates2003} and are at minimum 200ms (for a prepared vowel \cite{Fry1975}). A combination with a silence becoming reognisable (180ms \cite{}), the reaction to a silence (100ms) and language productions would result in at least a 550ms turn transition, outside the typical range. 
 
 As such, the question remains, how, if a non-speaker wishes to self-select as described in \cite{Sacks1974}, can they predict a TRP if they are not simply responding to silence as claimed by \cite{HelEdl2010}. 
 
 \subsubsection{Turn-taking Cues} 
-The first systematic studies of turning taking cues came from \cite{Duncan1972, Duncan1974} where they identified a number of turn-taking cues that signal turn-completion across a few different domains. Syntacially complete phrases, phrase-final intonation, termination of hand gesticulation were all identified as turn-taking cues. In literature, it appears that syntactic and prosodic features tend to have received the most focus as turn-taking cues. \cite{Sacks1974} first argued that syntax and semantics played a more influential role in prediction than a prosodic feature such as intonation. 
+The first systematic studies of turning taking cues came from \cite{Duncan1972, Duncan1974} where they identified a number of turn-taking cues that signal turn-completion across a few different domains. Syntacially complete phrases, phrase-final intonation, termination of hand gesticulation were all identified as turn-taking cues. In literature, it appears that syntactic and prosodic features tend to have received the most focus as turn-taking cues. \cite{Sacks1974} first argued that syntax and semantics played a more influential role in prediction than a prosodic feature such as intonation. This idea was investigated further by \cite{Ford1996} who concluded that intonational completion
+re than previously considered, as compared to linguistic features such as syntactic completeness. \cite{Ford1996} defined an utterance as being \texttt{syntactically complete} if "in it's discourse context, it could be intepreted as a complete clause, that is, without an overt or directly reoverable predicte without considering intonation of interactional import". They also define another feature of \textt{pragmatic completness} that is judged as the completion of intonational and conversational action sequencing. (Explain conversational action sequencing?). \cite{Ford1996} found that points of both pragmatic and intonational complete are nearly always syntactic complete points however the reverse is not always true. As such, they defined these points of pragmatic, intonational and syntactic completeness as a \textt{Complex Transition Relevance Place}, where a 71\% of speaker changes occur at CRTPs. (CRITIQUE). \cite{Ford1996} 
 
-
-
-
-\begin{enumerate} 
-    \item 
-\end{enumerate}
-
-
-\section{Citations}
-
-Citations, such as \citet{P1} or \citep{P2}, can be generated using
-\texttt{BibTeX}. We recommend using the \texttt{natbib} package (default) or the newer \texttt{biblatex} system. 
-
-You may use any consistent reference style that you prefer, including ``(Author, Year)'' citations. 
 
 \chapter{Your next chapter}
 
