Rewrite CA thesis part

--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -28,7 +28,7 @@
   publisher={Frontiers Media SA}
 }
 
-@article{Clayman2012,
+@article{Clayman2013,
   title={Turn-constructional units and the transition-relevance place},
   author={Clayman, Steven E},
   journal={The handbook of conversation analysis},
@@ -173,7 +173,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S088523082030111X},
 author = {Gabriel Skantze},
 keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
 
-@book{Duncan2015,
+@book{Duncan1977,
   title={Face-to-face interaction: Research, methods, and theory},
   author={Duncan, Starkey and Fiske, Donald W},
   year={2015},
@@ -273,6 +273,65 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
   year={2003},
   publisher={Springer}
 }
+@book{Lev1983,
+  title={Pragmatics},
+  author={Levinson, Stephen C},
+  year={1983},
+  publisher={Cambridge university press}
+}
+@article{Riest2015,
+  title={Anticipation in turn-taking: mechanisms and information sources},
+  author={Riest, Carina and Jorschick, Annett B and de Ruiter, Jan P},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={89},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
 
+@inproceedings{Yngve1970,
+  title={On getting a word in edgewise},
+  author={Yngve, Victor H},
+  booktitle={Papers from the sixth regional meeting Chicago Linguistic Society, April 16-18, 1970, Chicago Linguistic Society, Chicago},
+  pages={567--578},
+  year={1970}
+}
 
+@article{Duncan1973,
+  title={Toward a grammar for dyadic conversation},
+  author={DUNCAN, STARKEY, JR},
+  year={1973},
+  publisher={Walter de Gruyter, Berlin/New York Berlin, New York}
+}
 
+@article{tenBosch2005,
+  title={On temporal aspects of turn taking in conversational dialogues},
+  author={Ten Bosch, Louis and Oostdijk, Nelleke and Boves, Lou},
+  journal={Speech Communication},
+  volume={47},
+  number={1-2},
+  pages={80--86},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{KenTor2014,
+  title={The timing and construction of preference: A quantitative study},
+  author={Kendrick, Kobin H and Torreira, Francisco},
+  journal={Discourse Processes},
+  volume={52},
+  number={4},
+  pages={255--289},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{Kendon1967,
+  title={Some functions of gaze-direction in social interaction},
+  author={Kendon, Adam},
+  journal={Acta psychologica},
+  volume={26},
+  pages={22--63},
+  year={1967},
+  publisher={Elsevier}
+}
