--- a/docs/thesis/skeleton.tex
+++ b/docs/thesis/skeleton.tex
@@ -134,20 +134,47 @@ check your submission before the final deadline and if it requires resubmission
 after the deadline to conform to the page and style requirements you will be
 subject to the usual late penalties based on your final submission time.
 
-\section{Turn-taking Prediction}
-\subsection{From the Conversation Analysis Perspective}
-The most widely accepted model of turn-taking originates from \cite{Sacks1974}. They created their model based off a clear pattern in behaviour during social interaction. With this in mind they determine that the behaviour exhibits a joint and coordinated effortto determine turns while attempting to have a minimal number of turns. Although there is this effort, turn-taking organisation is not preplanned and it is coordinated in a manner that changes along the course of a conversation. During a dialogue \cite{Sacks1974} note that convservation is dominated by a single speaker at a time although multiple speakers at one time do occur commonly but they are brief. When the speaker switches, the transitions are characterised with no gap or overlap, most commonly, but also with a small overlap or gap. From these observations \cite{Sacks1974} suggested a series of definitions for these units of speech and rules to describe their interaction. Turn-taking is separated into units of speech called \textit{Turn-Constructional-Units (TCU)} where predominately one speaker is speaking and after each TCU there is a \textit{Transition-Relevant-Phase (TRP)} where the current speaker switches (turn-shift). 
-\cite{Sacks1974} noted that a turn-shift can but does not have to occur. The same could be said in reverse, that a turn-shift can occur when there is no TRP. At each TRP  \cite{Sacks1974} noted the turn-allocation techniques used to determine the next speaker. These techniques can be grouped into two categories: 'current selects next' and 'self-selection'. The current speaker selection could employ techniques such as gaze but for self selection it is simply the case that the first to start has the turn if the current speaker exhibits a non-selection. The current speaker is also able to select themselves if no other particpant self-selects. 
+\section{Turn-taking: From the Conversational Analaysis Perspective}
+Over the last few decades, psycolinguists have been fascinated with the complexity of the mechanisms of conversation along with the apparent ease with which speaker's are able to converse in a orderly and timely manner. 
+\cite{Sacks1974} is a widely cited paper that outlines some general observations that has gone on to inform general turn-taking literature. Primarily, that turn-taking organisation is not planned in adavance however the actions taken are still coordinated, in a flexible manner that can be decided upon by the current participants in a conversation. Typically one person speaks at a time and most transitions have a small gap or overlap but there are transitions where no gap and no overlap occur. 
+\cite{LevTor2015} used automatic analaysis to show that these observsations are indeed statisically valid. They note, that turns are generally short (mean 1680ms, median 1227ms) and turn transitions are typically short where most are between 100 and 200ms. 
 
-The development of speech technology has allowed for the automatic analysis of turn-taking by employing statistical analyis of a large corpora. \cite{LevTor2015} provides a systemic overview of the properties first noted by \cite{Sacks1974} and produced their own model of turn-taking where: turns are mostly short (mean=1680ms, median=1227ms); gaps in a speaker's current utterance are longer than those between speakers suggesting that the next speaker has the right to speak prior to the current speaker and also that overlaps are more common at turn transitions and within turns. They also develop a psycholinguistic model for turn-taking that backs the claim made by \cite{Sacks1974} that turn-taking requires projection. 
-<F8>
-\cite{LevTor2015} turn transitions typically occur between -100ms and 500ms. This is proven probelmatic, if we employ a reaction-based system, where studies have shown that language production latenices range from 600ms - 1500ms \cite{IndLev2004, Bates2003} and are at minimum 200ms (for a prepared vowel \cite{Fry1975}). A combination with a silence becoming reognisable (180ms \cite{}), the reaction to a silence (100ms) and language productions would result in at least a 550ms turn transition, outside the typical range. 
+\subsection{Models of Turn-taking Organisation} 
+This turn-taking organisation has generally been characterised in two different way within literature: the \texttt{reactionary} approach and the \texttt{predictive} approach.
+The former assumes that participants simply understand end-of-turn signals and react to them accordingly while the predictive approach entails the listener predicting the end of turn in advance such that responses are well timed. The reactionary approach assumes that turn-taking organisation is regulated by both vocal and gestural signals (\cite{Yngve1970}). This approach was pioneered by \cite{Duncan1972, Duncan1973, Duncan1974, Duncan1977} who argued for a precise set of context free turn-yielding 'signals'. \cite{Duncan1972} listed off phrase-final intonation, drawl on the final syllable, termination of hand gesticulation, changes in pitch and a termination of a grammatical clause. \cite{Duncan1977} that a speaker always produces at least one turn-yielding signal and as such, they advanced a model where turn-taking is purely controlled by the current speaker. 
 
-As such, the question remains, how, if a non-speaker wishes to self-select as described in \cite{Sacks1974}, can they predict a TRP if they are not simply responding to silence as claimed by \cite{HelEdl2010}. 
+Later literature goes on to argue against the general model of a reactionary approach as simply, turn-transitions occur too quickly and turn-yielding signals occur too late within a speaker's utterance for the listener to simply react to an end-of-turn signal. 
 
-\subsubsection{Turn-taking Cues} 
-The first systematic studies of turning taking cues came from \cite{Duncan1972, Duncan1974} where they identified a number of turn-taking cues that signal turn-completion across a few different domains. Syntacially complete phrases, phrase-final intonation, termination of hand gesticulation were all identified as turn-taking cues. In literature, it appears that syntactic and prosodic features tend to have received the most focus as turn-taking cues. \cite{Sacks1974} first argued that syntax and semantics played a more influential role in prediction than a prosodic feature such as intonation. This idea was investigated further by \cite{Ford1996} who concluded that intonational completion
-re than previously considered, as compared to linguistic features such as syntactic completeness. \cite{Ford1996} defined an utterance as being \texttt{syntactically complete} if "in it's discourse context, it could be intepreted as a complete clause, that is, without an overt or directly reoverable predicte without considering intonation of interactional import". They also define another feature of \textt{pragmatic completness} that is judged as the completion of intonational and conversational action sequencing. (Explain conversational action sequencing?). \cite{Ford1996} found that points of both pragmatic and intonational complete are nearly always syntactic complete points however the reverse is not always true. As such, they defined these points of pragmatic, intonational and syntactic completeness as a \textt{Complex Transition Relevance Place}, where a 71\% of speaker changes occur at CRTPs. (CRITIQUE). \cite{Ford1996} 
+\cite{Sacks1974} were the first to argue for this \texttt{predictive} approach and in their analysis of turn-taking argued that the observed speed of turn-transitions required some form of `projection` and even then, production of language would begin prior to the end of a turn. This model of turn-taking is based off of separating speech into units, where one speaker is the speaker, called \texttt{Turn Construction Units (TCU)} and immediately after completing a TCU a \texttt{Transition Relevance Place (TRP)} occurs that signals that a turn-transition (turn-shift) can occur. It is also important to note that a TRP does not always result in a turn-shift and a turn-shift does not always occur at a TRP. However, at each TRP there are certain rules that govern how, and if, a turn-shift will occur. 
+
+(1) The current speaker may select a new speaker during which the other participants act as listeners 
+(2) If the current speaker does not select then any participant can self-select. The first to start gains the turn.
+(3) If no other party self-selects, the current speaker may continue. 
+
+The rules predict that intra-speaker silent gaps are longer than inter-speaker gaps. \cite{tenBosch2005} reports that intra-speaker gaps are, on average, 25\% larger than inter-speaker gaps. This can be explained by rule (3) as for a speaker to continue (an intra-speaker gap) they have to first go though the other selection criteria and then continue speaking.
+\cite{Sacks1974} note that in order for a listener to project the end-of-turn than the speaker would have to construct their turns, with successive TCUs, in such a way that a turn transition is foreshadowed, showing that the turn is, in effect, winding down. 
+Some effort has been taken by \cite{HelEdl2010} to critique this \texttt{predictive} approach. They argued that the systematic properties outlined within \cite{Sacks1974} are consistent or that they exist at all. Most interesting, is their dissmissal of projection as a central principle of turn-taking, where instead they argue that for inter-speaker gaps longer than 200ms, the listener simply reacts to silence and further on, argue that listeners react to end-of-turn prosodic information. \cite{LevTor2015} provide a systematc rebuttal to these claims. Firstly, they argue that, for gaps longer than 200ms, participants cannot simply react to silence as the time taken for silence to become recognisable, react to said silence and produce a response is at minimum 550ms. \cite{Riest2015} point out that the presense of longer gaps could be explained by a speaker intetionally delaying a response when producing a 'dispreferred' response (\cite{Lev1983, KenTor2014}). 
+(Second objection?) 
+
+\subsection{Turn-taking Cues}
+The question remains, what features of speech are relevant when projecting TCU completion and as such an end-of-turn? Prior research related to turn-yielding signals (\cite{Duncan1972}), pointed out prosodic, syntactic and gestural features coincide with turn-completion at an end-of-turn. Later work focussed on expanding these turn-yielding signals for use in projecting a turn completion, and discussing features found eariler in an utterance than some of the phrase-final signals outlined by \cite{Duncan1972}. Most work has focussed on three aspects of conversation: syntactic, prosodic and pragmatic features. Gestural features \cite{Duncan1972} and gaze \cite{Kendon1967} have shown to be a useful part of turn-taking but findings in gaze have suggested these features are action dependent and as such more context-sensitive than other features \cite{Clayman2013}
+
+Although \cite{Sacks1996} left solving the question of how projection occurs they suggested that syntax provides a main projection cue allthough they also point out that intonation could also be used to differentiate between syntacitcally complete phrases. \cite{Sacks1974} argued that a relationship between syntax and projection can be illustrated by a listener's behviour of overlapping the final-phrase of a sentence while the speakers 'drawls' on the final syllable. As such the listener was projecting the turn-end based on the unfolding syntactic form and the current tempo of the utterance and as such an overlap occurs due to the slowing down of tempo by the speaker. 
+
+In their study \cite{Ford1996}, attempts to characterise TCUs using syntactic, intonational and pragmatic features and to quantify these features' role in TRPs. To do so they operantialised syntactic, intontation and pragmatic completness and use these to define points in an utterance that are complete with respect to each of these features. An utterance is \texttt{syntactically complete} according to \cite{Ford1996} if "in its discourse context, it could be interpreted as a complete clause, that is, with an overt or directly recoverable predicate, without considering intonation or interactional import.". They go on to describe syntactic completeness is "judged incremenatally within its previous context". \texttt{Intonational completeness} follows from other literature \cite{DuBoise1993} and characterised as "a stretch of speech uttered undera single coherent intonation contour". \texttt{Pragmatic completeness} is based on the notion of conversational action and in this instance the action completion, or pragmatic completeness, is based on whether an utterance is a part of a greater conversational action. \cite{Ford1996} found most points of turn transitions can be accurately predicted by a combination of all three measures of completeness, known as a \texttt{Complex Transition Relevance Place (CRTP)}, where they report that CRTPs predict 71\& of actual turn-shifts. 
+
+\cite{Ford1996} theorised that TCUs and their partnering TRPs are a complex notion and as such multiple factors should be considered for predicting a turn completion. There has been some debate, however, about which feature is most important for projection. 
+
+An experimental study \cite{DeRuiter2006}, showed that listeners can predict turn-completion equally accurately even when intonational contours are flattened. However turn-completion prediction was heavily effected by the removal of lexicosyntactic data. This showed that listeners use content of an utterance to predict turn-endings. \cite{Magyari2012} extended \cite{DeRuiter2006} by demonstrating that listeners' accuracy in end-of-turn prediction was correlated with the listener's anticipation of the last words in a turn. As such, they theorise that people make predictions about the remaining content of a turn in order to, or in parallel to, predicting the time left within a turn. \cite{PicGar2013} produces an improvement on the previous findings and propose and backup that the listener predicts a speaker's utterance and as such discern the intention of the speaker and in combination with the speaker's current speaker rate to predict the end-of-turn of the current speaker
+
+\cite{BogTor2015} have pointed out that the findings within \cite{DeRuiter2006} could be explained by a lack of controlling of other prosodic features aside from intontation, namely final syllable lengthening, which has been pointed out by \cite{Duncan1972} as a end-of-turn feature. \cite{BogTor2015} used long and short questions that contained equivalent syntactically equivalent completion points and suggest that since the same syntactic completion points were treated differently (short turn transitions far more prevelant in long questions) than lexicosyntactic information is not sufficient for turn projection. Another experiment carried out by \cite{BogTor2015} found that it was late prosodic cues, close to turn boundary, rather than other cues that allowed for accurate turn-detection. They conclude that both lexicosyntactic and intonational cues are used by listeners to time their response. It may appear that these findings are contradictory to results pointed out earlier related to 600ms required for planning the production of content-word turns \cite{IndLev2004} in that these turn-final cues are too late for the speed of a turn transitions as pointed out by \cite{Sacks1974}
+
+\subsection{A Concrete Model of Turn-Taking}
+\cite{LevTor2015}, from the experimental results listed above, derived a psycholinguistic model in order to account for the observations of \cite{Sacks1974} and with additional temporal considerations. A few results were mentioned previously but as suggested by \cite{Sacks1974} the latencies of speech production means that turn-taking is predictive in nature. However, this could purely relate to the production processes as turn-final cues are used in order for the production to be released. This is inline with arguments of speech production as the speech has already been prepared and the only action required is articulation. These cues have been identified as prosodic: phrase-final syllable lengthening, intonation; syntactic: syntactic completness and the overall conversational action of the contained utterance. 
+
+\section{Models for End-of-Turn Detection and Prediction}
+
+
 
 
 \chapter{Your next chapter}
